tests/src/frontend/syntax/invalid/missing_macro_id.sk
class C {
  macro fun m(): void {
    #
  }
}

fun main(): void {
  print_string("FAIL");
}
